--- a/ParcialLabo2/Properties/Resources.resx
+++ b/ParcialLabo2/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="animal-care" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\animal-care.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hide" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hide.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
